--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "JSONFormatter",
-  "version": "0.1.0",
+  "name": "json-formatter",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
